Use stream rather than parallelStream for repeatability.